hphp/hack/test/typecheck/typing_fail_abstract.php.exp
File "typing_fail_abstract.php", line 15, characters 21-21:
This method is declared as abstract, but has a body (NastCheck[3002])
